# retrieval

./: CHANGELOG.md  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  ___-0130882.mm_profdata  experiment-0131251.mm_profdata  retrieval-0131245.mm_profdata  retrieval_proc_macros-0131148.mm_profdata
examples/: basic.rs  drop_experiment.rs  experiment.rs  explanation.rs  testing.rs
examples/basic/: main.rs
examples/experiment/: clear  main.rs
examples/without_convenience/: main.rs  other.rs
retrieval_proc_macros/: Cargo.toml
retrieval_proc_macros/src/: lib.rs
src/: convenience.rs  core.rs  deref.rs  lib.rs
tests/: capacity.rs  items.rs  nonsense.rs
tests/location/: main.rs  other.rs
