[package]
name = "retrieval"
version = "0.1.0"
edition = "2024"
description = "Allows the retrieval of trait implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coolcatcoder/retrieval"
keywords = ["linkage","registration"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"